Fixes alignment in read to me

--- a/style.css
+++ b/style.css
@@ -190,8 +190,9 @@ main h3::after {
   border-top: 1px solid #ddd;
 }
 
-#webspeech {
+#read-figure {
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 10px;
   cursor: pointer;
